CustomObjects/objects/invoiceit_s__Dispatched_Item__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Dispatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispatch</label>
        <referenceTo>invoiceit_s__Dispatch__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Special_Notes__c</fullName>
        <label>Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Stock_Item__c</fullName>
        <label>Stock Item</label>
        <referenceTo>invoiceit_s__Stock_Item__c</referenceTo>
        <relationshipLabel>Dispatched Items</relationshipLabel>
        <relationshipName>Dispatched_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dispatched Item</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>invoiceit_s__Quantity__c</columns>
        <columns>invoiceit_s__Order_Rate_Plan_Charge__c</columns>
        <columns>invoiceit_s__Stock_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Dispatched Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispatched Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>